# mbml-forest-pipeline

./: .gitignore  01_linear_regression.ipynb  02_regression_model_simple.ipynb  03_regression_model_Treevars.ipynb  04_model_comparison.ipynb  05_factor_model.ipynb  06_regression_model.ipynb  CLAUDE_CODE_PROMPT.md  DATA_PIPELINE.md  MBML_curriculum_reference.md  PROJECT_JOURNAL.md  Preprocessing.ipynb  README.md  _test_scaling.py  final_notebook.ipynb  final_notebook_blr.ipynb  final_notebook_bnn.ipynb  final_notebook_spatial_features.ipynb  final_notebookv2.ipynb  join_indexruta.py  notebook_helpers.py  pyproject.toml  rasters_to_csv.py  spatial_features.py
models/: __init__.py  base.py  blr.py  bnn.py  exact_gp.py  gbm.py  hierarchical.py  linear.py  registry.py  rf.py  svgp.py
